--- a/gear/user_management/src/docker/manifest.json
+++ b/gear/user_management/src/docker/manifest.json
@@ -2,7 +2,7 @@
     "name": "user-management",
     "label": "User Management",
     "description": "Creates and updates user and user roles",
-    "version": "0.0.10",
+    "version": "0.0.22",
     "author": "NACC",
     "maintainer": "NACC <nacchelp@uw.edu>",
     "cite": "",
@@ -15,7 +15,7 @@
     "custom": {
         "gear-builder": {
             "category": "utility",
-            "image": "naccdata/user-management:0.0.10"
+            "image": "naccdata/user-management:0.0.22"
         },
         "flywheel": {
             "suite": "NACC Admin Gears",
@@ -23,6 +23,29 @@
         }
     },
     "inputs": {
+        "api-key": {
+            "base": "api-key"
+        },
+        "user_file": {
+            "base": "file",
+            "description": "The user YAML file",
+            "type": {
+                "enum": [
+                    "source code"
+                ]
+            },
+            "optional": false
+        },
+        "auth_file": {
+            "base": "file",
+            "description": "The role YAML file",
+            "type": {
+                "enum": [
+                    "source code"
+                ]
+            },
+            "optional": false
+        }
     },
     "config": {
         "dry_run": {
@@ -39,17 +62,6 @@
             "description": "The instance specific AWS parameter gearbot path prefix",
             "type": "string",
             "default": "/prod/flywheel/gearbot"
-
-        },
-        "source": {
-            "description": "Name of the source project",
-            "type": "string",
-            "default": "project-admin"
-        },
-        "user_file"  : {
-            "description": "The user YAML filename",
-            "type": "string",
-            "default": "nacc-directory-users.yaml"
         }
     },
     "command": "/bin/run"
