--- a/gear/identifier_provisioning/src/docker/BUILD
+++ b/gear/identifier_provisioning/src/docker/BUILD
@@ -1,6 +1,10 @@
 file(name="manifest", source="manifest.json")
 
-docker_image(name="identifier-provisioning",
-             source="Dockerfile",
-             dependencies=[":manifest", "gear/identifier_provisioning/src/python/identifier_provisioning_app:bin"],
-             image_tags=["0.0.1", "latest"])
+docker_image(
+    name="identifier-provisioning",
+    source="Dockerfile",
+    dependencies=[
+        ":manifest",
+        "gear/identifier_provisioning/src/python/identifier_provisioning_app:bin"
+    ],
+    image_tags=["0.0.1", "latest"])
