--- a/gear/identifer_lookup/src/docker/Dockerfile
+++ b/gear/identifer_lookup/src/docker/Dockerfile
@@ -6,6 +6,6 @@ RUN mkdir -p ${BASE_DIR}/input
 WORKDIR ${BASE_DIR}
 
 COPY gear/identifer_lookup/src/docker/manifest.json ${BASE_DIR}
-COPY gear.identifer_lookup.src.python.${APPNAME}/bin.pex /bin/run
+COPY gear.identifer_lookup.src.python.identifier_app/bin.pex /bin/run
 
 ENTRYPOINT [ "/bin/run" ]
